elliptical orbit plot

--- a/elliptical-orbits.ipynb
+++ b/elliptical-orbits.ipynb
@@ -21,7 +21,7 @@
    "source": [
     "phi = np.arange(0,2*np.pi,.01)\n",
     "r_orbit = 1.5e11 * u.m # change this for orbital radius\n",
-    "v_orbit = 3.e4 *u.m/u.s\n",
+    "v_orbit = 3.e4 *u.m/u.s # change this for orbital speed\n",
     "l = r_orbit*v_orbit\n",
     "const = l**2/(c.G*c.M_sun)\n",
     "e = 0.5\n",
