darkmatter lab with wget

--- a/darkmatter/rotation-curve-DM.ipynb
+++ b/darkmatter/rotation-curve-DM.ipynb
@@ -28,13 +28,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from astropy.io import ascii\n",
     "from matplotlib import pyplot as plt\n",
-    "%matplotlib inline\n"
+    "%matplotlib inline\n",
+    "import wget\n",
+    "import numpy as np\n"
    ]
   },
   {
@@ -50,12 +52,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ha = ascii.read('UGC4895.ha.csv',delimiter=',')\n",
-    "rdat = ascii.read('ugc4895r-ellipse-whdr.dat')"
+    "hfile = wget.download('https://raw.githubusercontent.com/rfinn/ASTR390/master/darkmatter/UGC4895.ha.csv')\n",
+    "rfile = wget.download('https://raw.githubusercontent.com/rfinn/ASTR390/master/darkmatter/ugc4895r-ellipse-whdr.dat')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ha = ascii.read(hfile,delimiter=',')\n",
+    "rdat = ascii.read(rfile)\n"
    ]
   },
   {
@@ -124,7 +136,7 @@
    "source": [
     "mylength =  # longest dimension, major axis\n",
     "mywidth =   # shortest dimension, minor axis\n",
-    "myellip = mywidth/mylength"
+    "myellip = mywidth/mylength\n"
    ]
   },
   {
